[package]
name = "Find_brain"
version = "0.8.5"
edition = "2021"

[dependencies]
rustils="0.1.23"

#цветной вывод в консоль
console = "0.15.7"
hex = "0.4.3"
base58 = "0.2.0"

sha2 = "0.11.0-pre.3"

sv = "0.2.2"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
num_cpus = "1.16.0"
rand = "0.9.0"
bincode = "1.3"
tiny-keccak = {version = "2.0.2", features = ['keccak']}
ripemd="0.1.3"

crossbeam = "0.8.4"
#bip84
bech32 = "0.11.0"

[target.'cfg(not(windows))'.dependencies]
rust_secp256k1 = { version = "0.30.0", package = "secp256k1" }

#ice_secp256k1 либа для винды
[target.'cfg(windows)'.dependencies]
libloading = "0.8.1"
lazy_static = "1.4.0"
once_cell = "1.19.0"

#это нужно для иконки в винде
[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = 3  # Уровень оптимизации (по умолчанию 3)
lto = true     # Включение Link-Time Optimization (LTO)
codegen-units = 1  # Уменьшение количества единиц кодогенерации для улучшения оптимизации
panic = 'abort'  # Замена паники на аварийное завершение для уменьшения размера бинарника
incremental = false  # Отключение инкрементальной компиляции для улучшения оптимизации